--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.blackjack">
+    package="com.example.blackjack"
+    android:targetSandboxVersion="2"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:minSdkVersion="23"
+        android:targetSdkVersion="29" />
 
     <application
         android:allowBackup="true"
+        android:appComponentFactory="androidx.core.app.CoreComponentFactory"
+        android:debuggable="true"
+        android:extractNativeLibs="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".play"></activity>
-        <activity android:name=".rules" />
-        <activity android:name=".MainActivity">
+        android:testOnly="true"
+        android:theme="@style/AppTheme" >
+        <activity android:name="com.example.blackjack.play" />
+        <activity android:name="com.example.blackjack.rules" />
+        <activity android:name="com.example.blackjack.playAgain" />
+        <activity android:name="com.example.blackjack.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
